--- a/.github/workflows/docker-cloudbuild.yml
+++ b/.github/workflows/docker-cloudbuild.yml
@@ -8,6 +8,8 @@ name: Cloud Builder Docker
 on:
   push:
     # Publish semver tags as releases.
+    branches:
+      - main
     tags:        
       - v[0-1].[0-9]+
       - v[0-1].[0-9]+.[0-9]+-beta
