--- a/.github/workflows/gorelease-action.yml
+++ b/.github/workflows/gorelease-action.yml
@@ -16,13 +16,14 @@ name: apigeecli-release
 
 on:
   push:
+    branches:
+      - main
     # Publish semver tags as releases.
     tags:        
       - v1.[0-9]+
       - v1.[0-9]+.[0-9]+-beta
 
 jobs:
-
   goreleaser:
     runs-on: ubuntu-latest
     steps:
@@ -47,9 +48,9 @@ jobs:
       - name: Import GPG key
         id: import_gpg
         uses: crazy-max/ghaction-import-gpg@v5
-        with:
-          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }}
+        # with:
+          # gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          # passphrase: ${{ secrets.PASSPHRASE }}
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v3
